--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Techdor</title>
+    <title>AI Club X</title>
 
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css" />
@@ -82,7 +82,7 @@
                     <a class="nav-link" href="contact.html">Contact </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="member.html">Member </a>
+                    <a class="nav-link" href="https://forms.gle/ZKXdC2LYULd4LVw77">Member </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="http://github.com/AIClubX"
