--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- fonts style -->
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Robota:400,600,700&display=swap"
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
@@ -449,28 +449,28 @@
               class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
               <div class="info_contact">
-                <h5>About Shop</h5>
-                <div>
-                  <div class="img-box">
-                    <img src="images/location-white.png" width="18px" alt="" />
-                  </div>
-                  <p>Address</p>
-                </div>
+                <h5>Contact</h5>
                 <div>
                   <div class="img-box">
                     <img src="images/telephone-white.png" width="12px" alt="" />
                   </div>
-                  <p>+01 1234567890</p>
+                  <p>+14086588538</p>
                 </div>
                 <div>
                   <div class="img-box">
                     <img src="images/envelope-white.png" width="18px" alt="" />
                   </div>
-                  <p>demo@gmail.com</p>
+                  <p>info@ai-club.io</p>
+                </div>
+                <div>
+                  <div class="img-box">
+                    <img src="images/location-white.png" width="18px" alt="" />
+                  </div>
+                  <p>Irvine, California, USA</p>
                 </div>
               </div>
             </div>
-            <div
+<! --       <div
               class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
               <div class="info_insta">
@@ -515,8 +515,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div
+            </div> -->
+            <div 
               class="col-md-3 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
               <div class="info_form">
@@ -553,11 +553,7 @@
           <div class="row">
             <div class="col-lg-7 col-md-9 mx-auto">
               <p>
-                Copyright &copy; 2020.Company name All rights reserved.<a
-                  target="_blank"
-                  href="http://sc.chinaz.com/moban/"
-                  >&#x7F51;&#x9875;&#x6A21;&#x677F;</a
-                >
+                Copyright &copy; 2024 AI Club. All rights reserved.
               </p>
             </div>
           </div>
