--- a/index.html
+++ b/index.html
@@ -319,10 +319,9 @@
     <section class="portfolio_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>Portfolio</h2>
+          <h2>Club Activities</h2>
           <p>
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority
+            Things We Do. 
           </p>
         </div>
 
@@ -438,10 +437,9 @@
               class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
               <div class="info_info">
-                <h5>Informations</h5>
+                <h5>Welcome</h5>
                 <p>
-                  ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                  eiusmod tempor incididunt
+                  For AI Affecionados, join the crowd and let the fun begin!
                 </p>
               </div>
             </div>
@@ -470,8 +468,8 @@
                 </div>
               </div>
             </div>
-<! --       <div
-              class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
+       <div
+             class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
               <div class="info_insta">
                 <h5>Instagram</h5>
@@ -515,7 +513,7 @@
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div>
             <div 
               class="col-md-3 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
