--- a/portfolio.html
+++ b/portfolio.html
@@ -286,19 +286,19 @@
     <!-- end info_section -->
 
 
-    <!-- footer section -->
-    <section class="container-fluid footer_section">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-7 col-md-9 mx-auto">
-            <p>
-              Copyright &copy; 2020.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
-            </p>
+     <!-- footer section -->
+      <section class="container-fluid footer_section">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-7 col-md-9 mx-auto">
+              <p>
+                Copyright &copy; 2024 AI Club. All rights reserved.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- footer section -->
+      </section>
+      <!-- footer section -->
 
   </div>
 
