--- a/service.html
+++ b/service.html
@@ -10,11 +10,11 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="keywords" content="AI Club, AI enthusiasts, AI affecionados" />
+    <meta name="description" content="About AI Club X" />
+    <meta name="author" content="Brought you by Bixory AI and HackHub" />
 
-    <title>Techdor</title>
+    <title>AI Club X</title>
 
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css" />
@@ -42,7 +42,7 @@
             <a class="navbar-brand" href="index.html">
               <span>
                 <!-- <img src="./images/logo.svg" alt="logo" style="height: 73px;border: 1px solid red;"> -->
-                <img src="./images/logo.jpg" alt="logo" style="height: 73px" />
+                <img src="./images/logo.jpg" alt="AI Club X logo" style="height: 80px" />
               </span>
             </a>
             <button
@@ -66,27 +66,27 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="index.html"
-                      >Home <span class="sr-only">(current)</span></a
+                      ><strong>Home</strong><span class="sr-only">(current)</span></a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html"> About</a>
+                    <a class="nav-link" href="about.html"> <strong>About</strong></a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="service.html"> Service </a>
+                    <a class="nav-link" href="service.html"> <strong>Service</strong></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                    <a class="nav-link" href="portfolio.html"> <strong>Portfolio</strong> </a>
                   </li>
+                #  <li class="nav-item">
+                #    <a class="nav-link" href="contact.html">Contact </a>
+                #  </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="member.html">Member </a>
+                    <a class="nav-link" href="member.html"><strong>Member</strong></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="http://github.com/AIClubX"
-                      >KNOWLEDGE BASE</a
+                      ><strong>Knowledge Base</strong></a
                     >
                   </li>
                 </ul>
