--- a/about.html
+++ b/about.html
@@ -10,11 +10,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="keywords" content="AI Club, AI enthusiasts, AI affecionados" />
+    <meta name="description" content="About AI Club X" />
+    <meta name="author" content="Brought you by Bixory AI and HackHub" />
 
-    <title>Techdor</title>
+
+    <title>AI Club X</title>
 
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css" />
