--- a/member.html
+++ b/member.html
@@ -8,11 +8,11 @@
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="keywords" content="AI Club, AI enthusiasts, AI affecionados" />
+    <meta name="description" content="About AI Club X" />
+    <meta name="author" content="Brought you by Bixory AI and HackHub" />
 
-    <title>Techdor</title>
+    <title>AI Club X</title>
 
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css" />
