--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html"> About</a>
+                    <a class="nav-link" href="about.html"><strong> About</strong></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="service.html"> Service </a>
+                    <a class="nav-link" href="service.html"><strong> Service </strong></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                    <a class="nav-link" href="portfolio.html"><strong> Portfolio </strong></a>
                   </li>
+<!--                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
+                  </li> -->
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="https://forms.gle/ZKXdC2LYULd4LVw77">Member </a>
+                    <a class="nav-link" href="https://forms.gle/ZKXdC2LYULd4LVw77"><strong> Member </strong></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="http://github.com/AIClubX"
-                      >KNOWLEDGE BASE</a
+                      ><strong>Knowledge Base</strong></a
                     >
                   </li>
                 </ul>
