--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="portfolio.html"><strong> Portfolio </strong></a>
                   </li>
-<!--                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
-                  </li> -->
+<!--                  <li class="nav-item">  -->
+<!--                    <a class="nav-link" href="contact.html"><strong> Contact </strong></a> -->
+<!--                  </li> -->
                   <li class="nav-item">
                     <a class="nav-link" href="https://forms.gle/ZKXdC2LYULd4LVw77"><strong> Member </strong></a>
                   </li>
