--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="keywords" content="AI Club, AI enthusiasts, AI affecionados" />
+    <meta name="description" content="About AI Club X" />
+    <meta name="author" content="Brought you by Bixory AI and HackHub" />
 
     <title>AI Club X</title>
 
