--- a/about.html
+++ b/about.html
@@ -66,29 +66,29 @@
                 class="d-flex ml-auto flex-column flex-lg-row align-items-center"
               >
                 <ul class="navbar-nav">
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" href="index.html"
                       >Home <span class="sr-only">(current)</span></a
                     >
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="about.html"> About</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html"><strong> About</strong></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="service.html"> Service </a>
+                    <a class="nav-link" href="service.html"><strong> Service </strong></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                    <a class="nav-link" href="portfolio.html"><strong> Portfolio </strong></a>
                   </li>
+<!--                  <li class="nav-item">  -->
+<!--                    <a class="nav-link" href="contact.html"><strong> Contact </strong></a> -->
+<!--                  </li> -->
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="member.html">Member </a>
+                    <a class="nav-link" href="https://forms.gle/ZKXdC2LYULd4LVw77"><strong> Member </strong></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="http://github.com/AIClubX"
-                      >KNOWLEDGE BASE</a
+                      ><strong>Knowledge Base</strong></a
                     >
                   </li>
                 </ul>
