--- a/service.html
+++ b/service.html
@@ -78,9 +78,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="portfolio.html"> <strong>Portfolio</strong> </a>
                   </li>
-                #  <li class="nav-item">
-                #    <a class="nav-link" href="contact.html">Contact </a>
-                #  </li>
+                <! --  <li class="nav-item"> -->
+                <! --    <a class="nav-link" href="contact.html">Contact </a> -->
+                <! --  </li -->
                   <li class="nav-item">
                     <a class="nav-link" href="member.html"><strong>Member</strong></a>
                   </li>
