--- a/service.html
+++ b/service.html
@@ -78,9 +78,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="portfolio.html"><strong> Portfolio </strong></a>
                   </li>
-<!--                  <li class="nav-item">  -->
-<!--                    <a class="nav-link" href="contact.html"><strong> Contact </strong></a> -->
-<!--                  </li> -->
+<!--                 <li class="nav-item">  -->
+<!--                   <a class="nav-link" href="contact.html"><strong> Contact </strong></a> -->
+<!--                 </li> -->
                   <li class="nav-item">
                     <a class="nav-link" href="https://forms.gle/ZKXdC2LYULd4LVw77"><strong> Member </strong></a>
                   </li>
@@ -202,21 +202,21 @@
                 <h5>About Shop</h5>
                 <div>
                   <div class="img-box">
-                    <img src="images/location-white.png" width="18px" alt="" />
-                  </div>
-                  <p>Address</p>
-                </div>
-                <div>
-                  <div class="img-box">
                     <img src="images/telephone-white.png" width="12px" alt="" />
                   </div>
-                  <p>+01 1234567890</p>
+                  <p>+14086588538</p>
                 </div>
                 <div>
                   <div class="img-box">
                     <img src="images/envelope-white.png" width="18px" alt="" />
                   </div>
-                  <p>demo@gmail.com</p>
+                  <p>info@ai-club.io</p>
+                </div>
+                <div>
+                  <div class="img-box">
+                    <img src="images/location-white.png" width="18px" alt="" />
+                  </div>
+                  <p>Irvine, California, USA</p>
                 </div>
               </div>
             </div>
