--- a/about.html
+++ b/about.html
@@ -158,21 +158,21 @@
                 <h5>About Shop</h5>
                 <div>
                   <div class="img-box">
-                    <img src="images/location-white.png" width="18px" alt="" />
-                  </div>
-                  <p>Address</p>
-                </div>
-                <div>
-                  <div class="img-box">
                     <img src="images/telephone-white.png" width="12px" alt="" />
                   </div>
-                  <p>+01 1234567890</p>
+                  <p>+14086588538</p>
                 </div>
                 <div>
                   <div class="img-box">
                     <img src="images/envelope-white.png" width="18px" alt="" />
                   </div>
-                  <p>demo@gmail.com</p>
+                  <p>info@ai-club.io</p>
+                </div>
+                <div>
+                  <div class="img-box">
+                    <img src="images/location-white.png" width="18px" alt="" />
+                  </div>
+                  <p>Irvine, California, USA</p>
                 </div>
               </div>
             </div>
