--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
           Portfolio
         </h2>
         <p>
-          There are many variations of passages of Lorem Ipsum available, but the majority
+        Active AI Projects Open for Members  
         </p>
       </div>
 
@@ -171,7 +171,7 @@
                 Informations
               </h5>
               <p>
-                ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              For AI Affecionados, Join the Crowd and Let the Fun Begin!
               </p>
             </div>
           </div>
@@ -180,30 +180,24 @@
               <h5>
                 About Shop
               </h5>
-              <div>
-                <div class="img-box">
-                  <img src="images/location-white.png" width="18px" alt="">
+                <div>
+                  <div class="img-box">
+                    <img src="images/telephone-white.png" width="12px" alt="" />
+                  </div>
+                  <p>+14086588538</p>
                 </div>
-                <p>
-                  Address
-                </p>
-              </div>
-              <div>
-                <div class="img-box">
-                  <img src="images/telephone-white.png" width="12px" alt="">
+                <div>
+                  <div class="img-box">
+                    <img src="images/envelope-white.png" width="18px" alt="" />
+                  </div>
+                  <p>info@ai-club.io</p>
                 </div>
-                <p>
-                  +01 1234567890
-                </p>
-              </div>
-              <div>
-                <div class="img-box">
-                  <img src="images/envelope-white.png" width="18px" alt="">
+                <div>
+                  <div class="img-box">
+                    <img src="images/location-white.png" width="18px" alt="" />
+                  </div>
+                  <p>Irvine, California, USA</p>
                 </div>
-                <p>
-                  demo@gmail.com
-                </p>
-              </div>
             </div>
           </div>
           <div class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left ">
