--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
               <div class="info_info">
                 <h5>Welcome</h5>
                 <p>
-                  For AI Affecionados, join the crowd and let the fun begin!
+                  For AI Affecionados, Join the Crowd and Let the Fun Begin!
                 </p>
               </div>
             </div>
