past events page added, and formal footer applied to all page

--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
                       >Home <span class="sr-only">(current)</span></a
                     >
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" href="about.html"
                       ><strong> About</strong></a
                     >
@@ -80,7 +80,7 @@
                       ><strong> Service </strong></a
                     >
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" href="events.html">
                       <strong> Events </strong></a
                     >
@@ -115,33 +115,75 @@
     </div>
 
     <!-- about section -->
-    <section class="about_section layout_padding">
-      <div class="container-fluid">
-        <div class="row">
+    <section class="pt-5 pb-5">
+      <div class="container d-flex flex-column align-items-center">
+        <div class="heading_container text-center">
+          <h2>past events</h2>
+        </div>
+        <div class="flex flex-col row g-5 align-items-center my-4">
           <div class="col-md-6">
-            <div class="img-box">
-              <img src="images/about-img.png" alt="" />
-            </div>
+            <img
+              src="images/page3_img1.jpg"
+              alt=""
+              class="img-fluid mx-auto d-block"
+            />
           </div>
-          <div class="col-md-5">
-            <div class="detail-box">
-              <div class="heading_container">
-                <h2>About Us</h2>
-              </div>
-              <p>
-                Welcome to AI Club X, a dynamic community where college students
-                and young professionals come together to explore the fascinating
-                world of artificial intelligence. Our mission is to empower
-                individuals through AI, fostering a network of like-minded
-                enthusiasts who collaborate on innovative AI projects. At AI
-                Club X, we believe in an open, bold, and respectful environment
-                where knowledge is freely shared, mutual support is the norm,
-                and personal growth and leadership are highly encouraged. Join
-                us to learn, network, and be part of a global movement that is
-                shaping the future of AI.
-              </p>
-              <a href=""> Read More </a>
-            </div>
+          <div class="col-md-6">
+            <h2 class="mb-3"><a href="#">Barcelona</a></h2>
+            <p>
+              Cras facilisis, nulla vel viverra auctor, leo gna sodales felis,
+              quis malesuada nibh odio ut velit. Proin pharetra luctus diam, a
+              celerisque eros convallis accumsan.
+            </p>
+            <p>
+              Maecenas vehicula egestas venenatis. Duis massa elit, auctor non
+              pellentesque vel.
+            </p>
+            <a href="#" class="btn btn-primary">LEARN MORE</a>
+          </div>
+        </div>
+        <div class="row align-items-center mb-4">
+          <div class="col-md-6">
+            <img
+              src="images/page3_img2.jpg"
+              alt=""
+              class="img-fluid mx-auto d-block"
+            />
+          </div>
+          <div class="col-md-6">
+            <h2 class="mb-3"><a href="#">Barcelona</a></h2>
+            <p>
+              Cras facilisis, nulla vel viverra auctor, leo gna sodales felis,
+              quis malesuada nibh odio ut velit. Proin pharetra luctus diam, a
+              celerisque eros convallis accumsan.
+            </p>
+            <p>
+              Maecenas vehicula egestas venenatis. Duis massa elit, auctor non
+              pellentesque vel.
+            </p>
+            <a href="#" class="btn btn-primary">LEARN MORE</a>
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <img
+              src="images/page3_img3.jpg"
+              alt=""
+              class="img-fluid mx-auto d-block"
+            />
+          </div>
+          <div class="col-md-6">
+            <h2 class="mb-3"><a href="#">Barcelona</a></h2>
+            <p>
+              Cras facilisis, nulla vel viverra auctor, leo gna sodales felis,
+              quis malesuada nibh odio ut velit. Proin pharetra luctus diam, a
+              celerisque eros convallis accumsan.
+            </p>
+            <p>
+              Maecenas vehicula egestas venenatis. Duis massa elit, auctor non
+              pellentesque vel.
+            </p>
+            <a href="#" class="btn btn-primary">LEARN MORE</a>
           </div>
         </div>
       </div>
@@ -263,7 +305,6 @@
           </div>
         </div>
       </section>
-
       <!-- end info_section -->
 
       <!-- footer section -->
