--- a/index.html
+++ b/index.html
@@ -70,19 +70,34 @@
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html"><strong> About</strong></a>
+                    <a class="nav-link" href="about.html"
+                      ><strong> About</strong></a
+                    >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="service.html"><strong> Service </strong></a>
+                    <a class="nav-link" href="service.html"
+                      ><strong> Service </strong></a
+                    >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html"><strong> Portfolio </strong></a>
+                    <a class="nav-link" href="events.html">
+                      <strong> Events </strong></a
+                    >
                   </li>
-<!--                  <li class="nav-item">  -->
-<!--                    <a class="nav-link" href="contact.html"><strong> Contact </strong></a> -->
-<!--                  </li> -->
                   <li class="nav-item">
-                    <a class="nav-link" href="https://forms.gle/ZKXdC2LYULd4LVw77"><strong> Member </strong></a>
+                    <a class="nav-link" href="portfolio.html"
+                      ><strong> Portfolio </strong></a
+                    >
+                  </li>
+                  <!--                  <li class="nav-item">  -->
+                  <!--                    <a class="nav-link" href="contact.html"><strong> Contact </strong></a> -->
+                  <!--                  </li> -->
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="https://forms.gle/ZKXdC2LYULd4LVw77"
+                      ><strong> Member </strong></a
+                    >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="http://github.com/AIClubX"
@@ -320,9 +335,7 @@
       <div class="container">
         <div class="heading_container">
           <h2>Club Activities</h2>
-          <p>
-            Things We Do. 
-          </p>
+          <p>Things We Do.</p>
         </div>
 
         <div class="layout_padding2-top">
@@ -469,9 +482,9 @@
               </div>
             </div>
             <div
-             class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
+              class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
-              <div class="info_insta">
+              <!-- <div class="info_insta">
                 <h5>Instagram</h5>
                 <div class="insta_container">
                   <div>
@@ -512,9 +525,9 @@
                     </a>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
-            <div 
+            <div
               class="col-md-3 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
               <div class="info_form">
@@ -550,9 +563,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-7 col-md-9 mx-auto">
-              <p>
-                Copyright &copy; 2024 AI Club. All rights reserved.
-              </p>
+              <p>Copyright &copy; 2024 AI Club. All rights reserved.</p>
             </div>
           </div>
         </div>
