--- a/service.html
+++ b/service.html
@@ -42,7 +42,11 @@
             <a class="navbar-brand" href="index.html">
               <span>
                 <!-- <img src="./images/logo.svg" alt="logo" style="height: 73px;border: 1px solid red;"> -->
-                <img src="./images/logo.jpg" alt="AI Club X logo" style="height: 80px" />
+                <img
+                  src="./images/logo.jpg"
+                  alt="AI Club X logo"
+                  style="height: 80px"
+                />
               </span>
             </a>
             <button
@@ -64,25 +68,40 @@
                 class="d-flex ml-auto flex-column flex-lg-row align-items-center"
               >
                 <ul class="navbar-nav">
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" href="index.html"
                       >Home <span class="sr-only">(current)</span></a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html"><strong> About</strong></a>
+                    <a class="nav-link" href="about.html"
+                      ><strong> About</strong></a
+                    >
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="service.html"
+                      ><strong> Service </strong></a
+                    >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="service.html"><strong> Service </strong></a>
+                    <a class="nav-link" href="events.html">
+                      <strong> Events </strong></a
+                    >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html"><strong> Portfolio </strong></a>
+                    <a class="nav-link" href="portfolio.html"
+                      ><strong> Portfolio </strong></a
+                    >
                   </li>
-<!--                 <li class="nav-item">  -->
-<!--                   <a class="nav-link" href="contact.html"><strong> Contact </strong></a> -->
-<!--                 </li> -->
+                  <!--                 <li class="nav-item">  -->
+                  <!--                   <a class="nav-link" href="contact.html"><strong> Contact </strong></a> -->
+                  <!--                 </li> -->
                   <li class="nav-item">
-                    <a class="nav-link" href="https://forms.gle/ZKXdC2LYULd4LVw77"><strong> Member </strong></a>
+                    <a
+                      class="nav-link"
+                      href="https://forms.gle/ZKXdC2LYULd4LVw77"
+                      ><strong> Member </strong></a
+                    >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="http://github.com/AIClubX"
@@ -188,10 +207,9 @@
               class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
               <div class="info_info">
-                <h5>Informations</h5>
+                <h5>Welcome</h5>
                 <p>
-                  ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                  eiusmod tempor incididunt
+                  For AI Affecionados, Join the Crowd and Let the Fun Begin!
                 </p>
               </div>
             </div>
@@ -199,7 +217,7 @@
               class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
               <div class="info_contact">
-                <h5>About Shop</h5>
+                <h5>Contact</h5>
                 <div>
                   <div class="img-box">
                     <img src="images/telephone-white.png" width="12px" alt="" />
@@ -223,7 +241,7 @@
             <div
               class="col-md-3 mb-4 mb-md-0 d-flex d-md-block flex-column align-items-center text-center text-md-left"
             >
-              <div class="info_insta">
+              <!-- <div class="info_insta">
                 <h5>Instagram</h5>
                 <div class="insta_container">
                   <div>
@@ -264,7 +282,7 @@
                     </a>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div
               class="col-md-3 d-flex d-md-block flex-column align-items-center text-center text-md-left"
@@ -297,14 +315,12 @@
 
       <!-- end info_section -->
 
-     <!-- footer section -->
+      <!-- footer section -->
       <section class="container-fluid footer_section">
         <div class="container">
           <div class="row">
             <div class="col-lg-7 col-md-9 mx-auto">
-              <p>
-                Copyright &copy; 2024 AI Club. All rights reserved.
-              </p>
+              <p>Copyright &copy; 2024 AI Club. All rights reserved.</p>
             </div>
           </div>
         </div>
